[gd_scene load_steps=5 format=3 uid="uid://dxt1pif8eymj"]

[ext_resource type="Script" path="res://game.gd" id="1_tkvc6"]
[ext_resource type="PackedScene" uid="uid://2qpr8hodrbsi" path="res://player.tscn" id="2_kustv"]
[ext_resource type="PackedScene" uid="uid://dokqrpxf6tpte" path="res://enemy.tscn" id="3_d8jnq"]
[ext_resource type="PackedScene" uid="uid://d4exuhg7n32t7" path="res://ui.tscn" id="4_38e1t"]

[node name="Game" type="Node2D"]
script = ExtResource("1_tkvc6")

[node name="Player" parent="." instance=ExtResource("2_kustv")]
position = Vector2(194, 314)

[node name="Enemy" parent="." instance=ExtResource("3_d8jnq")]
position = Vector2(965, 278)

[node name="UI" parent="." instance=ExtResource("4_38e1t")]

[connection signal="enemy_attack_input" from="UI" to="." method="_on_enemy_attack_pressed"]
[connection signal="enemy_special_input" from="UI" to="." method="_on_enemy_special_pressed"]
[connection signal="player_attack_input" from="UI" to="." method="_on_player_attack_pressed"]
[connection signal="player_special_input" from="UI" to="." method="_on_player_attack_pressed"]
